# MatchPractic

./: .dockerignore  .env  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/exceptions/: validation.py
app/routers/: __init__.py  match_result.py  vacancy_route.py
app/schemas/: __init__.py  job_resume.py  job_vacancy.py  result.py
app/services/: __init__.py  match_model.py  match_service.py  summarization_service.py
docker_compose/: app.yaml  neural_network.yaml
lfs/model_skills/: config.cfg  meta.json
lfs/model_skills/morphologizer/: model
lfs/model_skills/ner/: model  moves
lfs/model_skills/parser/: model
lfs/model_skills/senter/: model
lfs/model_skills/tok2vec/: model
lfs/model_skills/vocab/: strings.json
lfs/summarization_model/: config.json  generation_config.json  model.safetensors  tokenizer.json  tokenizer_config.json
