[project]
name = "matchpractic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "ollama>=0.4.8",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "scikit-learn>=1.6.1",
    "stop-words>=2018.7.23",
    "uvicorn>=0.34.2",
]
